[gd_scene load_steps=3 format=3 uid="uid://drqr8qxe3h5j4"]

[ext_resource type="Script" path="res://Objects/pause_menu.gd" id="1_y5vo7"]
[ext_resource type="Theme" uid="uid://ce6xxqptef1yo" path="res://Assets/Theme Menu/Menu.tres" id="2_o0gms"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_y5vo7")

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 192.0
offset_top = -67.0
offset_right = -192.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_o0gms")

[node name="resume" type="Button" parent="menu_holder"]
layout_mode = 2
text = "Resume"

[node name="title" type="Button" parent="menu_holder"]
layout_mode = 2
text = "Return to Title"

[node name="quit" type="Button" parent="menu_holder"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="menu_holder/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="menu_holder/title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="menu_holder/quit" to="." method="_on_quit_pressed"]
